--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 /node_modules
 /local.env
 /dist
+/.netlify
+
+[functions]
+  external_node_modules = ["express"]
+  node_bundler = "esbuild"
+[[redirects]]
+  force = true
+  from = "/api/*"
+  status = 200
+  to = "/.netlify/functions/api/:splat"
