--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "handsonn...",
   "main": "src/index.ts",
   "scripts": {
-    "build": "npx tsc",
+    "build": "netlify deploy --prod",
     "start": "node dist/index.js",
     "start:dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
