--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "handsonn...",
   "main": "src/index.ts",
   "scripts": {
-    "build": "netlify deploy --prod",
-    "start": "node dist/index.js",
+    "build": "netlify-lambda build src",
+    "start": "netlify-lambda build src",
     "start:dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "netlify-lambda": "^2.0.16",
     "serverless-http": "^3.2.0",
     "yup": "^1.3.3"
   },
