--- a/package.json
+++ b/package.json
@@ -4,21 +4,18 @@
   "description": "handsonn...",
   "main": "src/index.ts",
   "scripts": {
-    "build": "netlify-lambda build src",
-    "start": "netlify-lambda build src",
+    "build": "npx tsc",
+    "start": "node dist/index.js",
     "start:dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@netlify/functions": "^2.6.0",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
-    "netlify-lambda": "^2.0.16",
-    "serverless-http": "^3.2.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
